// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`post resolver should get a list of posts 1`] = `
Array [
  Object {
    "__v": 0,
    "_id": "5abba8e47af4d91c259e12ee",
    "author": null,
    "createdAt": "2018-10-10T13:00:00",
    "editedAt": "2018-10-10T13:00:00",
    "message": "Some message",
  },
]
`;

exports[`post resolver should get a specific post 1`] = `
Object {
  "__v": 0,
  "_id": "5abba8e47af4d91c259e12ee",
  "author": null,
  "createdAt": "2018-10-10T13:00:00",
  "editedAt": "2018-10-10T13:00:00",
  "message": "Some message",
}
`;
